--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,5 @@ dependencies {
     compile 'com.j256.ormlite:ormlite-android:5.0'
     compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'com.facebook.stetho:stetho:1.4.2'
-
+    compile 'com.android.support:design:25.1.0'
 }
