Added settings with SharedPreferences class. Classically, directly in activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.CreateElementActivity" />
-        <activity android:name=".activity.EditElementActivity"></activity>
+        <activity android:name=".activity.EditElementActivity" />
+        <activity android:name=".activity.SettingsActivity"></activity>
     </application>
 
 </manifest>
